# picturebot-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE.md  README.md  docker-compose.yml
.github/workflows/: ghcr.yml
src/: http.rs  main.rs  util.rs
src/discord/: mod.rs  register.rs  webhook.rs
src/discord/commands/: mod.rs  reload.rs  upload.rs
src/upload/: mod.rs
src/upload/provider/: http_bearer.rs  mod.rs  s3.rs
